--- a/css/pharma.css
+++ b/css/pharma.css
@@ -20,6 +20,7 @@ a:hover {
 	text-shadow: 1px 1px 0 black;
 	font-family: sans-serif;
 	font-size: 2em; 
+	margin-top: -3%;
 }
 .parallax-bg{
 	background-image: url(../img/jumbo-parallax.png);
@@ -35,42 +36,60 @@ a:hover {
 	margin: 3% auto;
 }
 /**********************************Pill-Cards************************************/
-.pCards{
+.pBg-1{
 	background: url(../img/anal.png) no-repeat;
-	background-size: auto 100%;
-	background-position: center 20%;
+}
+.pBg-2{
+	background: url(../img/pils.png) no-repeat;
+}
+.pBg-3{
+	background: url(../img/pils1.png) no-repeat;
+}
+.pBg-4{
+	background: url(../img/pils2.png) no-repeat;
+}
+.pBg-5{
+	background: url(../img/pils3.png) no-repeat;
+}
+.pBg-6{
+	background: url(../img/pils4.png) no-repeat;
+}
+.pCards{
+	background-size: 100% auto;
+	background-position: center;
 	margin: 1% 2%;
 	width: 100%;
 	min-height: 200px;
 	border-radius: 5px;
 	position: relative;
-	
 	-webkit-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
-.pCards:hover{
-	background-size: auto 110%;
+div.pCards:hover{
+	background-size: 110% auto;
 }
 
 .pCards:hover .pCardT{
 	background: rgba(9,86,155,0.85);
-	top: 0;
+	height: 100%;
 	padding-top: 10%;
 	border-radius: 5px;
+	bottom: 0;
 }
 
 .pCardT{
 	background: rgba(9,86,155,0.8);
 	position: absolute;
-	bottom:0;
+	bottom:30%;
+	height:40%;
 	color: white;
 	font-weight: 10px;
-	border-radius: 0 0 5px 5px;
+	border-radius: 0;
 	
-	-webkit-transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease;
-	-o-transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease;
-	transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease;
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 .pCardT>p{
 	margin: 5%;
