--- a/css/pharma.css
+++ b/css/pharma.css
@@ -81,6 +81,7 @@ div.pCards:hover{
 	background: rgba(9,86,155,0.8);
 	position: absolute;
 	bottom:0;
+	height:40%;
 	color: white;
 	font-weight: 10px;
 	border-radius: 0 0 5px 5px;
