--- a/css/pharma.css
+++ b/css/pharma.css
@@ -75,20 +75,21 @@ div.pCards:hover{
 	height: 100%;
 	padding-top: 10%;
 	border-radius: 5px;
+	bottom: 0;
 }
 
 .pCardT{
 	background: rgba(9,86,155,0.8);
 	position: absolute;
-	bottom:0;
+	bottom:30%;
 	height:40%;
 	color: white;
 	font-weight: 10px;
-	border-radius: 0 0 5px 5px;
+	border-radius: 0;
 	
-	-webkit-transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease, height 0.5s ease;
-	-o-transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease, height 0.5s ease;
-	transition: background 0.5s ease, top 0.5s ease, padding-top 0.5s ease, height 0.5s ease;
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 .pCardT>p{
 	margin: 5%;
