--- a/css/pharma.css
+++ b/css/pharma.css
@@ -21,13 +21,17 @@
 	background-color: #999;
 	border-radius: 10px;
 }
-/**************************************Body Std Css************************************************/
+/**************************************Body Std Styles************************************************/
 *{ font-family: "Istok Web", sans-serif; scroll-behavior: smooth;}
+html{ overflow-x: hidden }
 
 section h1,
 section h2{
 	margin-bottom: 30px;
 	font-size: 3em;
+}
+.container{
+	margin: 32px auto;
 }
 /*****************************Link*******************/
 a:link,
@@ -37,23 +41,142 @@ a:visited {
 a:hover {
 	color: #00f3E6;
 }
-/***************************************************/
-.container{
-	margin: 32px auto;
-}
-
+/*****************************Top***********************/
 .mainJ{
 	background: url(../img/main-land3.png);
 	width: 100%;
 	background-size: cover;
-	background-position: 0 100%;
+	background-position: right bottom;
 	background-repeat: no-repeat;
 	color: #fff;
 	font-size: 2em;
 	position: relative;
-	margin-top: -5% !important;
-	min-height: 720px; 
+	min-height: 720px;
 }
+.wellC{
+	margin: 0;
+	padding: 0;
+	top: 30%;
+	position: absolute;
+	background: none;
+}
+.blockquote{ background: rgba(0,0,0,0.4); }
+/*-------------------------------Top-Nav-------------------*/
+.top-nav{
+	position: absolute;
+	left: 0%;
+	top: 2%;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	overflow: hidden;
+	padding-left: 4% !important;
+}/* 
+.top-nav a:first-child{
+}
+.top-nav li{
+} */
+.top-nav a{
+	float: left;
+	text-decoration: none;
+	display: block;
+	padding: 8px;
+	color: #353535 /* 4E4E4E */;
+	text-align: center;
+}
+.top-nav a:hover{
+	color: #4898D7;
+}
+.nav-toggle{
+	background: rgba(0,0,0, .4);
+	color: #f0f0f0;
+	border: none;
+	display: none;
+	outline: none;
+	border-radius: 5px;
+}
+.nav-toggle:hover{
+	background: rgba(0,0,0, .3);
+	color: #fff;
+}
+
+@media screen and (max-width: 600px) {
+	.mainJ{
+		background-image: linear-gradient(to right bottom, #00B3E6, #00f3E6);
+		min-height: 400px;
+	}
+	.top-nav{ position: relative; padding-top: 1%; z-index: 99; }
+	
+	.top-nav a{
+		display: none;
+		color: #f0f0f0;
+	}
+	.nav-toggle {
+		display: block;
+	}
+
+	.wellC{
+		margin: 0;
+		padding-top: 45%;
+		position: relative;
+		z-index: 95;
+		background-position: #000;
+	}
+	.blockquote{
+		border: none;
+		border-top: 5px double #fff;
+	}
+	.logo>img{
+		box-shadow: 0 0 10px rgba(34,34,34,0.5);
+	}
+	.wraper{
+		position: absolute !important;
+		perspective: none  !important;
+		top: 10%  !important;
+		left: 16% !important;
+
+	}
+	.logo>img{
+		box-shadow: none !important;
+		background: none !important;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.top-nav.responsive { position: relative; padding-top: 1%; background: rgba(0,0,0, .4); }
+	.top-nav.responsive .nav-toggle {
+		position: absolute;
+		right: 2%;
+		top: 1%
+	}
+	.wellC.pad{ padding-top: 0; }
+	.top-nav.responsive a,
+	.top-nav.responsive a{
+		float: none;
+		display: block;
+		text-align: left;
+	}
+}
+/*------------------------------------Logo--------------------------*/
+.wraper{
+	position: absolute;
+	perspective: 80px;
+	bottom: 13.5%;
+	right: 15.6%;
+}
+.logo>img{
+	background: rgba(240,240,240, .7);
+	box-shadow: 1px 1px 1px #321c0a,
+				2px 1px 1px #422c1a,
+				3px 2px 1px #523c2a,
+				4px 2px 1px #523c2a,
+				5px 3px 1px #523c2a,
+				6px 3px 10px -10px #523c2a,
+				7px 5px 10px 5px rgba(34,34,34,0.5);
+	transform: rotateY(-3deg);
+}
+
+/*****************************Parallax**********************************/
 .parallax-bg{
 	background-image: url(../img/jumbo-parallax.png);
 	background-color: #00C5F0; /*#09569B*/
@@ -97,7 +220,8 @@ a:hover {
 	background-size: 110% auto;
 	background-position: center;
 	margin: 1% 2%;
-	width: 100%;
+	width: 20%;
+	display: inline-block;
 	min-height: 200px;
 	border-radius: 5px;
 	position: relative;
@@ -113,6 +237,7 @@ a:hover {
 	background: rgba(9,86,155,0.85);
 	height: 100%;
 	border-radius: 5px;
+	padding: 10%;
 }
 
 .pCardT{
@@ -127,7 +252,7 @@ a:hover {
 	bottom: 0;
 	right: 0;
 	left: 0;
-	padding: 10%;
+	padding: 5% 10%;
 	margin: 0;
 	-webkit-transition: all 0.5s ease;
 	-o-transition: all 0.5s ease;
